# llm-web-platform

./: README.md  docker-compose.yml
backend/: database.db  dependencies.py  main.py  pyproject.toml  requirement.txt
backend/controllers/: auth_controller.py  job_controller.py  story_controller.py
backend/core/: __init__.py  config.py  llm_schemas.py  metrics.py  models.py  redis_client.py  story_generators.py  token_store.py
backend/db/: database.py
backend/middlewares/: __init__.py  client_ip_middleware.py  error_handler.py  exception_middleware.py  request_validator.py  response_formatter.py  response_helper.py  timing_middleware.py  validation_middleware.py
backend/models/: job.py  story.py  user.py
backend/prompts/: story_prompts.py
backend/repositories/: job_repository.py  story_repository.py  user_repository.py
backend/routers/: api.py  auth_router.py  job.py  job_router.py  router_registry.py  story.py  story_router.py
backend/schemas/: auth.py  job.py  job_schema.py  llm_schema.py  story.py  story_schema.py
backend/services/: auth_service.py  job_service.py  story_service.py
backend/utils/: constants.py  db_exception_handler.py  email_handler.py  exceptions.py  jwt_handler.py  password_handler.py  response_helper.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  utils.js
frontend/src/api/: storyApi.jsx
frontend/src/components/: StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
frontend/src/hooks/: useStoryJob.jsx
